--- a/frontend/todo-app/src/app/todo/todo.component.html
+++ b/frontend/todo-app/src/app/todo/todo.component.html
@@ -1,3 +1,7 @@
+<mat-form-field appearance="fill">
+  <mat-label>Input</mat-label>
+  <input matInput />
+</mat-form-field>
 <mat-selection-list>
   <mat-list-option *ngFor="let task of tasks">
     {{ task.name }}
