--- a/frontend/todo-app/src/app/todo/todo.component.html
+++ b/frontend/todo-app/src/app/todo/todo.component.html
@@ -1,24 +1,31 @@
-<mat-form-field appearance="fill">
+<mat-form-field appearance="fill" id="input">
   <mat-label>Wpisz nowe zadanie</mat-label>
   <input matInput #taskName />
   <!--WAŻNE!!! Przez znak # można definiować wartości formularzy-->
   <!--podwójne oznaczenie może być problem-->
 </mat-form-field>
 
-<button
-  mat-raised-button
-  color="primary"
-  id="button1"
-  (click)="addTask(taskName.value); taskName.value = ''"
->
+<button mat-raised-button color="primary" id="button1" (click)="addTask(taskName.value); taskName.value = ''">
   Dodaj
 </button>
 
-<mat-selection-list>
-  <mat-list-option *ngFor="let task of tasks">
-    {{ task.name }}
-  </mat-list-option>
-</mat-selection-list>
+
+<div id=ld>
+  <mat-list id="delete">
+    <mat-list-item *ngFor="let task of tasks">
+      <button mat-icon-button color="warn" id="delete" (click)="deleteTask(task)"
+        aria-label="Example icon button with a heart icon">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </mat-list-item>
+  </mat-list>
+
+  <mat-selection-list id="list">
+    <mat-list-option *ngFor="let task of tasks">
+      {{ task.name }}
+    </mat-list-option>
+  </mat-selection-list>
+</div>
 
 <!--
   <p>
