dodanie listy list dla board

--- a/frontend/todo-app/src/app/board/board.component.html
+++ b/frontend/todo-app/src/app/board/board.component.html
@@ -1,2 +1,7 @@
 <p>board works!</p>
+
+<mat-list>
+    <mat-list-item *ngFor="let boardP of boardlist"> {{boardP.name}} </mat-list-item>
+</mat-list>
+
 <app-todo></app-todo>
