--- a/frontend/todo-app/src/app/start/start.component.html
+++ b/frontend/todo-app/src/app/start/start.component.html
@@ -1,6 +1,9 @@
 <h1>Freetodo</h1>
 <div id="button1">
-    <button mat-raised-button color="primary" routerLink="/board">
-        Stwórz własną nową todo-listę bez logowania
-    </button>
+	<button mat-raised-button color="primary" (click)="createBoard()">
+		Stwórz własną nową todo-listę bez logowania
+	</button>
 </div>
+<!--
+	routerLink="/todo/28f4e284-f104-48e4-9342-9a0b266de274"
+-->
