--- a/frontend/todo-app/src/app/todo/todo.component.html
+++ b/frontend/todo-app/src/app/todo/todo.component.html
@@ -1,29 +1,39 @@
 <mat-form-field appearance="fill" id="input">
-  <mat-label>Wpisz nowe zadanie</mat-label>
-  <input matInput #taskName />
-  <!--WAŻNE!!! Przez znak # można definiować wartości formularzy-->
-  <!--podwójne oznaczenie może być problem-->
+	<mat-label>Wpisz nowe zadanie</mat-label>
+	<input matInput #todoName />
 </mat-form-field>
 
-<!-- Dodać  (click)=" addTask(taskName.value)"-->
-<button mat-raised-button color="primary" id="button1; taskName.value = ''">
-  Dodaj
+<button
+	mat-raised-button
+	color="primary"
+	id="button1; taskName.value = ''"
+	(click)="createMyTodo(todoName.value)"
+>
+	Dodaj
 </button>
 
+<div id="ld">
+	<div>
+		<mat-list>
+			<mat-list-item *ngFor="let todo of todos">
+				<button
+					mat-icon-button
+					color="warn"
+					id="delete"
+					aria-label="Example icon button with a heart icon"
+					(click)="deleteMyTodo(todo.id)"
+				>
+					<mat-icon>delete</mat-icon>
+				</button>
+			</mat-list-item>
+		</mat-list>
+	</div>
 
-<div id=ld>
-  <mat-list id=" delete">
-    <mat-list-item *ngFor="let task of tasks">
-      <!-- Dodać  (click)="deleteTask(task)-->
-      <button mat-icon-button color="warn" id="delete" aria-label="Example icon button with a heart icon">
-        <mat-icon>delete</mat-icon>
-      </button>
-    </mat-list-item>
-  </mat-list>
-
-  <mat-selection-list id="list">
-    <mat-list-option *ngFor="let task of tasks">
-      {{ task.name }}
-    </mat-list-option>
-  </mat-selection-list>
+	<div id="list">
+		<mat-selection-list id="list">
+			<mat-list-option *ngFor="let todo of todos">
+				{{ todo.title }}
+			</mat-list-option>
+		</mat-selection-list>
+	</div>
 </div>
