--- a/frontend/todo-app/src/app/start/start.component.html
+++ b/frontend/todo-app/src/app/start/start.component.html
@@ -1,6 +1,6 @@
 <h1>Freetodo</h1>
 <div id="button1">
-	<button mat-raised-button color="primary" (click)="createBoard()">
+	<button mat-raised-button color="primary" (click)="createMyBoard()">
 		Stwórz własną nową todo-listę bez logowania
 	</button>
 </div>
