--- a/frontend/todo-app/src/app/todo/todo.component.html
+++ b/frontend/todo-app/src/app/todo/todo.component.html
@@ -31,7 +31,11 @@
 
 	<div id="list">
 		<mat-selection-list id="list">
-			<mat-list-option *ngFor="let todo of todos">
+			<mat-list-option
+				*ngFor="let todo of todos"
+				(click)="markMyTodo(todo.id, todo.isDone)"
+				selected="{{ todo.isDone }}"
+			>
 				{{ todo.title }}
 			</mat-list-option>
 		</mat-selection-list>
