--- a/frontend/todo-app/src/app/board/board.component.css
+++ b/frontend/todo-app/src/app/board/board.component.css
@@ -1,31 +1,19 @@
-#delete {
-    float: left;
-    position: relative;
-    float: left;
-    margin: 0px;
-  }
-#list {
-    position: relative;
-    float: left;
-    width: 80%;
-}
-#input{
-    width:80%;
-    margin-left: 6%;
-}
 button#button1 {
-    position: relative;
-    bottom: 8px;
-    height: 50px;
+	position: relative;
+	bottom: 8px;
+	height: 50px;
 }
-a{
-    display: block;
-    float: right;
-    font-size: large;
-    text-decoration: unset;
-    color: black;
+
+#list {
+	width: 80%;
 }
-div{
-    position: relative;
-    left: 7%;
+#input {
+	width: 77%;
+	margin-left: 5%;
+}
+div#ld {
+	margin-left: 5%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
 }
