--- a/frontend/todo-app/src/app/board/board.component.html
+++ b/frontend/todo-app/src/app/board/board.component.html
@@ -1,32 +1,43 @@
 <mat-form-field appearance="fill" id="input">
-    <mat-label>Wpisz nową listę</mat-label>
-    <input matInput #listName />
-    <!--WAŻNE!!! Przez znak # można definiować wartości formularzy-->
-    <!--podwójne oznaczenie może być problem-->
+	<mat-label>Wpisz nowe zadanie</mat-label>
+	<input matInput #todoName />
 </mat-form-field>
 
-<!--(click)="addTask(listName.value); listName.value = ''"-->
-<button mat-raised-button color="primary" id="button1">
-    Dodaj
+<button
+	mat-raised-button
+	color="primary"
+	id="button1; taskName.value = ''"
+	(click)="createMyTodo(todoName.value)"
+>
+	Dodaj
 </button>
 
-
 <div id="ld">
-    <!--
-    <mat-list id="delete">
-        <mat-list-item *ngFor="let boardP of boardlist">
-            <button mat-icon-button color="warn" id="delete" (click)="deleteTask(boardP)">
-                <mat-icon>delete</mat-icon>
-            </button>
-        </mat-list-item>
-    </mat-list>
--->
-    <mat-card id="list" *ngFor="let boardP of boardlist">
-        <a routerLink="/todo">{{boardP.name}}</a>
-        <button mat-icon-button color="warn" id="delete">
-            <mat-icon>delete</mat-icon>
-        </button>
-    </mat-card>
+	<div>
+		<mat-list>
+			<mat-list-item *ngFor="let todo of todos">
+				<button
+					mat-icon-button
+					color="warn"
+					id="delete"
+					aria-label="Example icon button with a heart icon"
+					(click)="deleteMyTodo(todo.id)"
+				>
+					<mat-icon>delete</mat-icon>
+				</button>
+			</mat-list-item>
+		</mat-list>
+	</div>
 
+	<div id="list">
+		<mat-selection-list id="list">
+			<mat-list-option
+				*ngFor="let todo of todos"
+				(click)="markMyTodo(todo.id, todo.isDone)"
+				selected="{{ todo.isDone }}"
+			>
+				{{ todo.title }}
+			</mat-list-option>
+		</mat-selection-list>
+	</div>
 </div>
-<!--<app-todo></app-todo>-->
