dodanie menu (domyślnego)

--- a/frontend/src/app/board/board.component.css
+++ b/frontend/src/app/board/board.component.css
@@ -17,3 +17,14 @@ div#ld {
 	flex-direction: row;
 	justify-content: center;
 }
+.sidenav-container {
+	height: 100vh;
+}
+
+.sidenav {
+	width: 200px;
+}
+
+.sidenav .mat-toolbar {
+	background: inherit;
+}
