przeniesienie wyszukiwania do sidebar

--- a/frontend/src/app/board/board.component.css
+++ b/frontend/src/app/board/board.component.css
@@ -28,3 +28,14 @@ div#ld {
 .sidenav .mat-toolbar {
 	background: inherit;
 }
+.home {
+	padding-left: 10px;
+}
+.add-icon {
+	height: 1vh;
+}
+.add {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
