--- a/frontend/src/app/board/board.component.html
+++ b/frontend/src/app/board/board.component.html
@@ -7,7 +7,11 @@
 	>
 		<mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
 	</button>
-	<span>test-app</span>
+	<button (click)="goBack()" aria-label="Toggle sidenav" mat-icon-button>
+		<mat-icon aria-label="Side nav toggle icon">home</mat-icon>
+	</button>
+
+	<span>freetodo</span>
 </mat-toolbar>
 
 <mat-sidenav-container class="sidenav-container">
@@ -21,6 +25,23 @@
 		[opened]="(isHandset$ | async) === false"
 	>
 		<mat-toolbar>Menu</mat-toolbar>
+
+		<div class="add">
+			<mat-form-field id="input">
+				<mat-label>Wpisz nowe zadanie</mat-label>
+				<input matInput #todoName />
+			</mat-form-field>
+			<button
+				mat-icon-button
+				color="primary"
+				(click)="createMyTodo(todoName.value)"
+			>
+				<mat-icon aria-label="Side nav toggle icon" class="add-icon"
+					>add</mat-icon
+				>
+			</button>
+		</div>
+
 		<mat-nav-list>
 			<a mat-list-item href="#">Link 1</a>
 			<a mat-list-item href="#">Link 2</a>
@@ -29,20 +50,6 @@
 	</mat-sidenav>
 	<mat-sidenav-content>
 		<!--Content-->
-
-		<mat-form-field appearance="fill" id="input">
-			<mat-label>Wpisz nowe zadanie</mat-label>
-			<input matInput #todoName />
-		</mat-form-field>
-
-		<button
-			mat-raised-button
-			color="primary"
-			id="button1; taskName.value = ''"
-			(click)="createMyTodo(todoName.value)"
-		>
-			Dodaj
-		</button>
 
 		<div id="ld">
 			<div>
