--- a/frontend/src/app/board/board.component.html
+++ b/frontend/src/app/board/board.component.html
@@ -11,7 +11,7 @@
 		<mat-icon aria-label="Side nav toggle icon">home</mat-icon>
 	</button>
 
-	<span>freetodo</span>
+	<span>Freetodo</span>
 </mat-toolbar>
 
 <mat-sidenav-container class="sidenav-container">
@@ -28,7 +28,7 @@
 
 		<div class="add">
 			<mat-form-field id="input">
-				<mat-label>Wpisz nowe zadanie</mat-label>
+				<mat-label>Dodaj nowe zadanie</mat-label>
 				<input matInput #todoName />
 			</mat-form-field>
 			<button
@@ -43,9 +43,16 @@
 		</div>
 
 		<mat-nav-list>
-			<a mat-list-item href="#">Link 1</a>
-			<a mat-list-item href="#">Link 2</a>
-			<a mat-list-item href="#">Link 3</a>
+			<mat-toolbar>Filtrowanie</mat-toolbar>
+			<mat-list-item mat-list-item (click)="getMyAllTodos()"
+				>Wszystko</mat-list-item
+			>
+			<mat-list-item mat-list-item (click)="getMyDoneTodos()"
+				>Zadania wykonane</mat-list-item
+			>
+			<mat-list-item mat-list-item (click)="getMyUndoneTodos()"
+				>Zadania niewykonane</mat-list-item
+			>
 		</mat-nav-list>
 	</mat-sidenav>
 	<mat-sidenav-content>
