Add the deadline changing feature

--- a/src/frontend/src/app/board/board.component.html
+++ b/src/frontend/src/app/board/board.component.html
@@ -91,7 +91,10 @@
 						[value]="todo.isDone"
 						[selected]="todo.isDone"
 					>
-						{{ todo.title }}
+						{{ todo.title }}<br />
+						<div [ngStyle]="deadlineStyle">
+							{{ todo.deadline | date: "dd/MM/yy" }}
+						</div>
 					</mat-list-option>
 				</mat-selection-list>
 			</div>
