Add get todos with deadline

--- a/src/frontend/src/app/board/board.component.html
+++ b/src/frontend/src/app/board/board.component.html
@@ -53,6 +53,9 @@
 			<mat-list-item mat-list-item (click)="getMyUndoneTodos()"
 				>Zadania niewykonane</mat-list-item
 			>
+			<mat-list-item mat-list-item (click)="getTodosWithDeadline()"
+				>Zadania z terminem</mat-list-item
+			>
 		</mat-nav-list>
 	</mat-sidenav>
 	<mat-sidenav-content>
