--- a/src/frontend/src/app/board/board.component.html
+++ b/src/frontend/src/app/board/board.component.html
@@ -67,6 +67,70 @@
 			<mat-list-item mat-list-item (click)="getTodosForThisWeek()"
 				>Zadania na najbliższy tydzień</mat-list-item
 			>
+			<mat-toolbar>Sortowanie</mat-toolbar>
+
+			<div class="add">
+				<mat-form-field>
+					<mat-label>Data dodania</mat-label>
+					<input matInput [matDatepicker]="picker1" />
+					<mat-datepicker-toggle
+						matSuffix
+						[for]="picker1"
+					></mat-datepicker-toggle>
+					<mat-datepicker #picker1></mat-datepicker>
+				</mat-form-field>
+				<button
+					mat-icon-button
+					color="primary"
+					(click)="getTodosByCreationDate(picker1)"
+				>
+					<mat-icon aria-label="Side nav toggle icon" class="add-icon"
+						>filter_list</mat-icon
+					>
+				</button>
+			</div>
+
+			<div class="add">
+				<mat-form-field>
+					<mat-label>Termin</mat-label>
+					<input matInput [matDatepicker]="picker2" />
+					<mat-datepicker-toggle
+						matSuffix
+						[for]="picker2"
+					></mat-datepicker-toggle>
+					<mat-datepicker #picker2></mat-datepicker>
+				</mat-form-field>
+				<button
+					mat-icon-button
+					color="primary"
+					(click)="getTodosByDeadline(picker2)"
+				>
+					<mat-icon aria-label="Side nav toggle icon" class="add-icon"
+						>filter_list</mat-icon
+					>
+				</button>
+			</div>
+
+			<div class="add">
+				<mat-form-field>
+					<mat-label>Data wykonania</mat-label>
+					<input matInput [matDatepicker]="picker3" />
+					<mat-datepicker-toggle
+						matSuffix
+						[for]="picker3"
+					></mat-datepicker-toggle>
+					<mat-datepicker #picker3></mat-datepicker>
+				</mat-form-field>
+				<button
+					mat-icon-button
+					color="primary"
+					(click)="getTodosByDoneDate(picker3)"
+				>
+					<mat-icon aria-label="Side nav toggle icon" class="add-icon"
+						>filter_list</mat-icon
+					>
+				</button>
+			</div>
 		</mat-nav-list>
 	</mat-sidenav>
 	<mat-sidenav-content>
